--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ master ]
   schedule:
-    - cron: '00 6 * * *'
+    - cron: '00 6 * * mon'
 
 jobs:
   ibm-cloud-restart:
@@ -34,7 +34,7 @@ jobs:
         ./IBM_Cloud_CLI/ibmcloud target -g "$RESOURSE_ID"
         ./IBM_Cloud_CLI/ibmcloud target --cf
         ./IBM_Cloud_CLI/ibmcloud cf install -f -v 6.15.0
-    - name: Restart IBM Cloud
+    - name: Restart IBM Cloud 
       env:
         IBM_APP_NAME: ${{ secrets.IBM_APP_NAME }}
       run: |
