--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ master ]
   schedule:
-    - cron: '00 6 * * mon'
+    - cron: '00 6 * * *'
 
 jobs:
   ibm-cloud-restart:
